test/kube2e/upgrade/testdata/petstore/petstore_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petstore
  name: petstore
  namespace: ${INSTALL_NAMESPACE}
spec:
  selector:
    matchLabels:
      app: petstore
  replicas: 1
  template:
    metadata:
      labels:
        app: petstore
    spec:
      containers:
        - image: soloio/petstore-example:latest
          name: petstore
          ports:
            - containerPort: 8080
              name: http
