test/kube2e/upgrade/testdata/petstore/petstore_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstore
  namespace: ${INSTALL_NAMESPACE}
  labels:
    service: petstore
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app: petstore
