test/kube2e/upgrade/testdata/petstore/petstore_ups.yaml
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  labels:
    app: petstore
    discovered_by: kubernetesplugin
  name: gloo-system-petstore-8080
  namespace: ${INSTALL_NAMESPACE}
spec:
  discoveryMetadata: {}
  kube:
    selector:
      app: petstore
    serviceName: petstore
    serviceNamespace: ${INSTALL_NAMESPACE}
    servicePort: 8080
