test/kube2e/upgrade/testdata/petstore/petstore_vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: ${INSTALL_NAMESPACE}
  ownerReferences: []
spec:
  virtualHost:
    domains:
      - 'petstore'
    routes:
      - matchers:
          - exact: /all-pets
        options:
          prefixRewrite: /api/pets
        routeAction:
          single:
            upstream:
              name: gloo-system-petstore-8080
              namespace: ${INSTALL_NAMESPACE}
      - matchers:
          - exact: /single-pet
        options:
          prefixRewrite: /api/pets
        routeAction:
          single:
            upstream:
              name: gloo-system-petstore-8080
              namespace: ${INSTALL_NAMESPACE}
